fixed loading flicker

--- a/css/counter.css
+++ b/css/counter.css
@@ -389,7 +389,7 @@ footer p strong {
   background: #eee;
 }
 .truck {
-  background: url(https://helphog.com/assets/images/svg/truck.svg) no-repeat;
+  background: url(https://helphog.com/assets/images/truck.svg) no-repeat;
   background-size: contain;
   height: 60px;
 }
